WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208718
[iOS+macOS Debug] ASSERTION FAILED: m_effects.isEmpty() in WebCore::KeyframeEffectStack::~KeyframeEffectStack()
https://bugs.webkit.org/show_bug.cgi?id=208718
Summary
[iOS+macOS Debug] ASSERTION FAILED: m_effects.isEmpty() in WebCore::KeyframeE...
Jason Lawrence
Reported
2020-03-06 09:11:19 PST
Created
attachment 392730
[details]
commitStyles-crash-log imported/w3c/web-platform-tests/web-animations/interfaces/Animation/commitStyles.html Description: This test is flaky crashing on Mac Debug. History:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fweb-animations%2Finterfaces%2FAnimation%2FcommitStyles.html&platform=ios&platform=mac&style=debug&limit=50000
Crash log: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x0000000107867de0 WTFCrash + 16 (Assertions.cpp:305) 1 com.apple.WebCore 0x000000011dbd969b WTFCrashWithInfo(int, char const*, char const*, int) + 27 2 com.apple.WebCore 0x000000011fe3c24b WebCore::KeyframeEffectStack::~KeyframeEffectStack() + 107 (KeyframeEffectStack.cpp:43) 3 com.apple.WebCore 0x000000011fe3c2c5 WebCore::KeyframeEffectStack::~KeyframeEffectStack() + 21 (KeyframeEffectStack.cpp:44) 4 com.apple.WebCore 0x00000001205d874b std::__1::default_delete<WebCore::KeyframeEffectStack>::operator()(WebCore::KeyframeEffectStack*) const + 43 (memory:2335) 5 com.apple.WebCore 0x00000001205d86cf std::__1::unique_ptr<WebCore::KeyframeEffectStack, std::__1::default_delete<WebCore::KeyframeEffectStack> >::reset(WebCore::KeyframeEffectStack*) + 95 (memory:2649) 6 com.apple.WebCore 0x00000001205d8669 std::__1::unique_ptr<WebCore::KeyframeEffectStack, std::__1::default_delete<WebCore::KeyframeEffectStack> >::~unique_ptr() + 25 (memory:2602) 7 com.apple.WebCore 0x00000001205d8145 std::__1::unique_ptr<WebCore::KeyframeEffectStack, std::__1::default_delete<WebCore::KeyframeEffectStack> >::~unique_ptr() + 21 (memory:2602) 8 com.apple.WebCore 0x00000001205d8070 WebCore::ElementRareData::~ElementRareData() + 448 (ElementRareData.h:228) 9 com.apple.WebCore 0x00000001205d7e65 WebCore::ElementRareData::~ElementRareData() + 21 (ElementRareData.h:228) 10 com.apple.WebCore 0x00000001205d7dc1 WebCore::Node::NodeRareDataDeleter::operator()(WebCore::NodeRareData*) const + 65 (Node.cpp:406) 11 com.apple.WebCore 0x00000001205d7d2f std::__1::unique_ptr<WebCore::NodeRareData, WebCore::Node::NodeRareDataDeleter>::reset(WebCore::NodeRareData*) + 95 (memory:2649) 12 com.apple.WebCore 0x00000001205bac37 std::__1::unique_ptr<WebCore::NodeRareData, WebCore::Node::NodeRareDataDeleter>::operator=(std::nullptr_t) + 39 (memory:2607) 13 com.apple.WebCore 0x00000001205ba800 WebCore::Node::clearRareData() + 256 (Node.cpp:417) 14 com.apple.WebCore 0x00000001205ba603 WebCore::Node::~Node() + 915 (Node.cpp:358) 15 com.apple.WebCore 0x00000001203b6537 WebCore::ContainerNode::~ContainerNode() + 103 (ContainerNode.cpp:280) 16 com.apple.WebCore 0x00000001204d841f WebCore::Element::~Element() + 575 (Element.cpp:226) 17 com.apple.WebCore 0x00000001204d8ae5 WebCore::Element::~Element() + 21 (Element.cpp:226) 18 com.apple.WebCore 0x00000001204d8b09 WebCore::Element::~Element() + 25 (Element.cpp:198) 19 com.apple.WebCore 0x00000001205c658f WebCore::Node::removedLastRef() + 223 (Node.cpp:2546) 20 com.apple.WebCore 0x000000011dbfb06f WebCore::Node::deref() const + 527 (Node.h:717) 21 com.apple.WebCore 0x00000001205bd015 WebCore::Node::derefEventTarget() + 21 (Node.cpp:825) 22 com.apple.WebCore 0x000000011e0b7af6 WebCore::EventTarget::deref() + 22 (EventTarget.h:60) 23 com.apple.WebCore 0x000000011e0b7aaf WTF::Ref<WebCore::EventTarget, WTF::DumbPtrTraits<WebCore::EventTarget> >::~Ref() + 47 (Ref.h:62) 24 com.apple.WebCore 0x000000011e0b7a05 WTF::Ref<WebCore::EventTarget, WTF::DumbPtrTraits<WebCore::EventTarget> >::~Ref() + 21 (Ref.h:62) 25 com.apple.WebCore 0x000000011e5574b9 WebCore::JSDOMWrapper<WebCore::EventTarget>::~JSDOMWrapper() + 25 (JSDOMWrapper.h:71) 26 com.apple.WebCore 0x000000011e557495 WebCore::JSEventTarget::~JSEventTarget() + 21 (JSEventTarget.h:30) 27 com.apple.WebCore 0x000000011e509b05 WebCore::JSEventTarget::~JSEventTarget() + 21 (JSEventTarget.h:30) 28 com.apple.WebCore 0x000000011e4c932d WebCore::JSEventTarget::destroy(JSC::JSCell*) + 29 (JSEventTarget.cpp:251) 29 com.apple.JavaScriptCore 0x0000000108ffdbaa JSC::JSDestructibleObjectDestroyFunc::operator()(JSC::VM&, JSC::JSCell*) const + 42 (JSDestructibleObjectHeapCellType.cpp:38) 30 com.apple.JavaScriptCore 0x000000010900d455 void JSC::MarkedBlock::Handle::specializedSweep<false, (JSC::MarkedBlock::Handle::EmptyMode)0, (JSC::MarkedBlock::Handle::SweepMode)0, (JSC::MarkedBlock::Handle::SweepDestructionMode)0, (JSC::MarkedBlock::Handle::ScribbleMode)0, (JSC::MarkedBlock::Handle::NewlyAllocatedMode)0, (JSC::MarkedBlock::Handle::MarksMode)0, JSC::JSDestructibleObjectDestroyFunc>(JSC::FreeList*, JSC::MarkedBlock::Handle::EmptyMode, JSC::MarkedBlock::Handle::SweepMode, JSC::MarkedBlock::Handle::SweepDestructionMode, JSC::MarkedBlock::Handle::ScribbleMode, JSC::MarkedBlock::Handle::NewlyAllocatedMode, JSC::MarkedBlock::Handle::MarksMode, JSC::JSDestructibleObjectDestroyFunc const&)::'lambda'(void*)::operator()(void*) const + 69 (MarkedBlockInlines.h:261) 31 com.apple.JavaScriptCore 0x000000010900d4c4 void JSC::MarkedBlock::Handle::specializedSweep<false, (JSC::MarkedBlock::Handle::EmptyMode)0, (JSC::MarkedBlock::Handle::SweepMode)0, (JSC::MarkedBlock::Handle::SweepDestructionMode)0, (JSC::MarkedBlock::Handle::ScribbleMode)0, (JSC::MarkedBlock::Handle::NewlyAllocatedMode)0, (JSC::MarkedBlock::Handle::MarksMode)0, JSC::JSDestructibleObjectDestroyFunc>(JSC::FreeList*, JSC::MarkedBlock::Handle::EmptyMode, JSC::MarkedBlock::Handle::SweepMode, JSC::MarkedBlock::Handle::SweepDestructionMode, JSC::MarkedBlock::Handle::ScribbleMode, JSC::MarkedBlock::Handle::NewlyAllocatedMode, JSC::MarkedBlock::Handle::MarksMode, JSC::JSDestructibleObjectDestroyFunc const&)::'lambda'(unsigned long)::operator()(unsigned long) const + 84 (MarkedBlockInlines.h:321) 32 com.apple.JavaScriptCore 0x0000000109007deb void JSC::MarkedBlock::Handle::specializedSweep<false, (JSC::MarkedBlock::Handle::EmptyMode)0, (JSC::MarkedBlock::Handle::SweepMode)0, (JSC::MarkedBlock::Handle::SweepDestructionMode)0, (JSC::MarkedBlock::Handle::ScribbleMode)0, (JSC::MarkedBlock::Handle::NewlyAllocatedMode)0, (JSC::MarkedBlock::Handle::MarksMode)0, JSC::JSDestructibleObjectDestroyFunc>(JSC::FreeList*, JSC::MarkedBlock::Handle::EmptyMode, JSC::MarkedBlock::Handle::SweepMode, JSC::MarkedBlock::Handle::SweepDestructionMode, JSC::MarkedBlock::Handle::ScribbleMode, JSC::MarkedBlock::Handle::NewlyAllocatedMode, JSC::MarkedBlock::Handle::MarksMode, JSC::JSDestructibleObjectDestroyFunc const&) + 1371 (MarkedBlockInlines.h:342) 33 com.apple.JavaScriptCore 0x0000000108ffdb42 void JSC::MarkedBlock::Handle::finishSweepKnowingHeapCellType<JSC::JSDestructibleObjectDestroyFunc>(JSC::FreeList*, JSC::JSDestructibleObjectDestroyFunc const&) + 274 (MarkedBlockInlines.h:440) 34 com.apple.JavaScriptCore 0x0000000108ffda25 JSC::JSDestructibleObjectHeapCellType::finishSweep(JSC::MarkedBlock::Handle&, JSC::FreeList*) + 37 (JSDestructibleObjectHeapCellType.cpp:53) 35 com.apple.JavaScriptCore 0x0000000108a3d145 JSC::Subspace::finishSweep(JSC::MarkedBlock::Handle&, JSC::FreeList*) + 53 (Subspace.cpp:65) 36 com.apple.JavaScriptCore 0x0000000108a1c8b0 JSC::MarkedBlock::Handle::sweep(JSC::FreeList*) + 688 (MarkedBlock.cpp:419) 37 com.apple.JavaScriptCore 0x0000000108a06648 JSC::LocalAllocator::tryAllocateIn(JSC::MarkedBlock::Handle*) + 232 (LocalAllocator.cpp:230) 38 com.apple.JavaScriptCore 0x0000000108a06344 JSC::LocalAllocator::tryAllocateWithoutCollecting() + 292 (LocalAllocator.cpp:192) 39 com.apple.JavaScriptCore 0x0000000108a05eed JSC::LocalAllocator::allocateSlowCase(JSC::Heap&, JSC::GCDeferralContext*, JSC::AllocationFailureMode) + 429 (LocalAllocator.cpp:133) 40 com.apple.WebCore 0x000000011dc882ec JSC::LocalAllocator::allocate(JSC::Heap&, JSC::GCDeferralContext*, JSC::AllocationFailureMode)::'lambda'()::operator()() const + 76 (LocalAllocatorInlines.h:40) 41 com.apple.WebCore 0x000000011dc88219 JSC::HeapCell* JSC::FreeList::allocate<JSC::LocalAllocator::allocate(JSC::Heap&, JSC::GCDeferralContext*, JSC::AllocationFailureMode)::'lambda'()>(JSC::LocalAllocator::allocate(JSC::Heap&, JSC::GCDeferralContext*, JSC::AllocationFailureMode)::'lambda'() const&) + 169 (FreeListInlines.h:46) 42 com.apple.WebCore 0x000000011dc8813f JSC::LocalAllocator::allocate(JSC::Heap&, JSC::GCDeferralContext*, JSC::AllocationFailureMode) + 175 (LocalAllocatorInlines.h:37) 43 com.apple.WebCore 0x000000011dc8800e JSC::Allocator::allocate(JSC::Heap&, JSC::GCDeferralContext*, JSC::AllocationFailureMode) const + 46 (AllocatorInlines.h:35) 44 com.apple.WebCore 0x000000011ddf6bee JSC::CompleteSubspace::allocateNonVirtual(JSC::VM&, unsigned long, JSC::GCDeferralContext*, JSC::AllocationFailureMode) + 206 (CompleteSubspaceInlines.h:39) 45 com.apple.WebCore 0x000000011e197908 void* JSC::tryAllocateCellHelper<WebCore::JSCSSStyleDeclaration>(JSC::Heap&, unsigned long, JSC::GCDeferralContext*, JSC::AllocationFailureMode) + 264 (JSCellInlines.h:163) 46 com.apple.WebCore 0x000000011e1977f3 void* JSC::allocateCell<WebCore::JSCSSStyleDeclaration>(JSC::Heap&, unsigned long) + 35 (JSCellInlines.h:177) 47 com.apple.WebCore 0x000000011e197543 WebCore::JSCSSStyleDeclaration::create(JSC::Structure*, WebCore::JSDOMGlobalObject*, WTF::Ref<WebCore::CSSStyleDeclaration, WTF::DumbPtrTraits<WebCore::CSSStyleDeclaration> >&&) + 51 (JSCSSStyleDeclaration.h:34) 48 com.apple.WebCore 0x000000011e1257d4 std::__1::enable_if<std::is_same<WebCore::CSSStyleDeclaration, WebCore::CSSStyleDeclaration>::value, WebCore::JSDOMWrapperConverterTraits<WebCore::CSSStyleDeclaration>::WrapperClass*>::type WebCore::createWrapper<WebCore::CSSStyleDeclaration, WebCore::CSSStyleDeclaration>(WebCore::JSDOMGlobalObject*, WTF::Ref<WebCore::CSSStyleDeclaration, WTF::DumbPtrTraits<WebCore::CSSStyleDeclaration> >&&) + 196 (JSDOMWrapperCache.h:187) 49 com.apple.WebCore 0x000000011e1256f4 WebCore::toJSNewlyCreated(JSC::JSGlobalObject*, WebCore::JSDOMGlobalObject*, WTF::Ref<WebCore::CSSStyleDeclaration, WTF::DumbPtrTraits<WebCore::CSSStyleDeclaration> >&&) + 52 (JSCSSStyleDeclaration.cpp:621) 50 com.apple.WebCore 0x000000011e47b630 JSC::JSValue WebCore::JSConverter<WebCore::IDLInterface<WebCore::CSSStyleDeclaration> >::convertNewlyCreated<WTF::Ref<WebCore::CSSStyleDeclaration, WTF::DumbPtrTraits<WebCore::CSSStyleDeclaration> > >(JSC::JSGlobalObject&, WebCore::JSDOMGlobalObject&, WTF::Ref<WebCore::CSSStyleDeclaration, WTF::DumbPtrTraits<WebCore::CSSStyleDeclaration> >&&) + 64 (JSDOMConvertInterface.h:87) 51 com.apple.WebCore 0x000000011e47b410 JSC::JSValue WebCore::toJSNewlyCreated<WebCore::IDLInterface<WebCore::CSSStyleDeclaration>, WTF::Ref<WebCore::CSSStyleDeclaration, WTF::DumbPtrTraits<WebCore::CSSStyleDeclaration> > >(JSC::JSGlobalObject&, WebCore::JSDOMGlobalObject&, WTF::Ref<WebCore::CSSStyleDeclaration, WTF::DumbPtrTraits<WebCore::CSSStyleDeclaration> >&&) + 64 (JSDOMConvertBase.h:162) 52 com.apple.WebCore 0x000000011e47b302 WebCore::jsDOMWindowInstanceFunctionGetComputedStyleBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSDOMWindow*, JSC::ThrowScope&) + 674 (JSDOMWindow.cpp:31551) 53 com.apple.WebCore 0x000000011e381dbf long long WebCore::IDLOperation<WebCore::JSDOMWindow>::call<&(WebCore::jsDOMWindowInstanceFunctionGetComputedStyleBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSDOMWindow*, JSC::ThrowScope&)), (WebCore::CastedThisErrorBehavior)0>(JSC::JSGlobalObject&, JSC::CallFrame&, char const*) + 783 (JSDOMOperation.h:53) 54 com.apple.WebCore 0x000000011e381aa4 WebCore::jsDOMWindowInstanceFunctionGetComputedStyle(JSC::JSGlobalObject*, JSC::CallFrame*) + 36 (JSDOMWindow.cpp:31556) 55 ??? 0x00002033f7c01178 0 + 35407571980664 56 com.apple.JavaScriptCore 0x0000000107d93cb3 llint_entry + 119221 57 com.apple.JavaScriptCore 0x0000000107d93c10 llint_entry + 119058 58 com.apple.JavaScriptCore 0x0000000107d93c10 llint_entry + 119058 59 com.apple.JavaScriptCore 0x0000000107d93cb3 llint_entry + 119221 60 com.apple.JavaScriptCore 0x0000000107d93c10 llint_entry + 119058 61 com.apple.JavaScriptCore 0x0000000107d76893 vmEntryToJavaScript + 273 62 com.apple.JavaScriptCore 0x0000000108b86447 JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) + 199 (JITCodeInlines.h:38) 63 com.apple.JavaScriptCore 0x0000000108b86abf JSC::Interpreter::executeCall(JSC::JSGlobalObject*, JSC::JSObject*, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) + 1535 (Interpreter.cpp:910) 64 com.apple.JavaScriptCore 0x0000000108ea9dac JSC::call(JSC::JSGlobalObject*, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) + 236 (CallData.cpp:59) 65 com.apple.JavaScriptCore 0x0000000108eaa08b JSC::profiledCall(JSC::JSGlobalObject*, JSC::ProfilingReason, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) + 123 (CallData.cpp:80) 66 com.apple.JavaScriptCore 0x0000000109086b80 JSC::JSMicrotask::run(JSC::JSGlobalObject*) + 688 (JSMicrotask.cpp:96) 67 com.apple.WebCore 0x000000011fecbeb6 WebCore::JSExecState::runTask(JSC::JSGlobalObject*, JSC::Microtask&) + 54 (JSExecState.h:92) 68 com.apple.WebCore 0x000000011fed2fc8 WebCore::JSMicrotaskCallback::call() + 232 (JSMicrotaskCallback.h:47) 69 com.apple.WebCore 0x000000011fed2e4d WebCore::JSDOMWindowBase::queueMicrotaskToEventLoop(JSC::JSGlobalObject&, WTF::Ref<JSC::Microtask, WTF::DumbPtrTraits<JSC::Microtask> >&&)::$_35::operator()() + 29 (JSDOMWindowBase.cpp:215) 70 com.apple.WebCore 0x000000011fed2da9 WTF::Detail::CallableWrapper<WebCore::JSDOMWindowBase::queueMicrotaskToEventLoop(JSC::JSGlobalObject&, WTF::Ref<JSC::Microtask, WTF::DumbPtrTraits<JSC::Microtask> >&&)::$_35, void>::call() + 25 (Function.h:52) 71 com.apple.WebCore 0x000000011dbe6fea WTF::Function<void ()>::operator()() const + 138 (Function.h:84) 72 com.apple.WebCore 0x000000012052d2c9 WebCore::EventLoopFunctionDispatchTask::execute() + 25 (EventLoop.cpp:134) 73 com.apple.WebCore 0x000000012058be30 WebCore::MicrotaskQueue::performMicrotaskCheckpoint() + 336 (Microtasks.cpp:57) 74 com.apple.WebCore 0x00000001205298ce WebCore::EventLoop::performMicrotaskCheckpoint() + 30 (EventLoop.cpp:52) 75 com.apple.WebCore 0x000000012052a6a8 WebCore::EventLoopTaskGroup::performMicrotaskCheckpoint() + 72 (EventLoop.cpp:156) 76 com.apple.WebCore 0x000000011fdfc434 WebCore::DocumentTimeline::internalUpdateAnimationsAndSendEvents() + 660 (DocumentTimeline.cpp:426) 77 com.apple.WebCore 0x000000011fdfc16c WebCore::DocumentTimeline::updateAnimationsAndSendEvents() + 76 (DocumentTimeline.cpp:379) 78 com.apple.WebCore 0x00000001204396b6 WebCore::Document::updateAnimationsAndSendEvents(double) + 550 (Document.cpp:6321) 79 com.apple.WebCore 0x000000012129f28c WebCore::Page::updateRendering()::$_15::operator()(WebCore::Document&) const + 76 (Page.cpp:1342) 80 com.apple.WebCore 0x000000012129f211 WTF::Detail::CallableWrapper<WebCore::Page::updateRendering()::$_15, void, WebCore::Document&>::call(WebCore::Document&) + 49 (Function.h:52) 81 com.apple.WebCore 0x000000012126d2f7 WTF::Function<void (WebCore::Document&)>::operator()(WebCore::Document&) const + 151 (Function.h:84) 82 com.apple.WebCore 0x0000000121260c0c WebCore::Page::forEachDocument(WTF::Function<void (WebCore::Document&)> const&) const + 220 (Page.cpp:2845) 83 com.apple.WebCore 0x0000000121266c09 WebCore::Page::updateRendering() + 297 (Page.cpp:1336) 84 com.apple.WebKitLegacy 0x0000000136ddbf76 -[WebView(WebPrivate) _viewWillDrawInternal] + 86 (WebView.mm:1629) 85 com.apple.WebKitLegacy 0x0000000136e04cbc LayerFlushController::flushLayers() + 76 (WebView.mm:9277) 86 com.apple.WebKitLegacy 0x0000000136efd449 WebViewLayerFlushScheduler::layerFlushCallback() + 57 (WebViewData.mm:122) 87 com.apple.WebKitLegacy 0x0000000136efe9a8 WebViewLayerFlushScheduler::WebViewLayerFlushScheduler(LayerFlushController*)::$_0::operator()() const + 24 (WebViewData.mm:101) 88 com.apple.WebKitLegacy 0x0000000136efe969 WTF::Detail::CallableWrapper<WebViewLayerFlushScheduler::WebViewLayerFlushScheduler(LayerFlushController*)::$_0, void>::call() + 25 (Function.h:52) 89 com.apple.WebCore 0x000000011dbe6fea WTF::Function<void ()>::operator()() const + 138 (Function.h:84) 90 com.apple.WebCore 0x00000001214fb52c WebCore::RunLoopObserver::runLoopObserverFired() + 140 (RunLoopObserver.cpp:45) 91 com.apple.WebCore 0x00000001214fb490 WebCore::RunLoopObserver::runLoopObserverFired(__CFRunLoopObserver*, unsigned long, void*) + 32 (RunLoopObserver.cpp:39) 92 com.apple.CoreFoundation 0x00007fff2eb3df28 __CFRUNLOOP_IS_CALLING_OUT_TO_AN_OBSERVER_CALLBACK_FUNCTION__ + 23 93 com.apple.CoreFoundation 0x00007fff2eb3de5d __CFRunLoopDoObservers + 451 94 com.apple.CoreFoundation 0x00007fff2eae06a7 __CFRunLoopRun + 1431 95 com.apple.CoreFoundation 0x00007fff2eadfebe CFRunLoopRunSpecific + 455 96 DumpRenderTree 0x00000001064abaeb runTest(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&) + 3419 (DumpRenderTree.mm:2120) 97 DumpRenderTree 0x00000001064aacea runTestingServerLoop() + 218 (DumpRenderTree.mm:1229) 98 DumpRenderTree 0x00000001064aa413 dumpRenderTree(int, char const**) + 611 (DumpRenderTree.mm:1344) 99 DumpRenderTree 0x00000001064ac4fd DumpRenderTreeMain(int, char const**) + 109 (DumpRenderTree.mm:1463) 100 DumpRenderTree 0x000000010653ad52 main + 34 (DumpRenderTreeMain.mm:34) 101 libdyld.dylib 0x00007fff5aa363d5 start + 1
Attachments
commitStyles-crash-log
(153.54 KB, text/plain)
2020-03-06 09:11 PST
,
Jason Lawrence
no flags
Details
Patch
(3.98 KB, patch)
2020-03-24 09:11 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jason Lawrence
Comment 1
2020-03-06 09:32:46 PST
I have marked this test as crashing while this issue is investigated here:
https://trac.webkit.org/changeset/258000/webkit
https://trac.webkit.org/changeset/258001/webkit
Jason Lawrence
Comment 2
2020-03-06 09:46:42 PST
Reverted
r258001
for reason: I inadvertently changed the wrong expectation in this commit. Committed
r258002
: <
https://trac.webkit.org/changeset/258002
>
Jason Lawrence
Comment 3
2020-03-06 11:23:23 PST
I am able to reproduce this issue with
r257235
by running the command below, but cannot reproduce the issue with
r257234
. run-webkit-tests iterations 1000 --exit-after-n-failures 3 --force -f --no-retry --debug imported/w3c/web-platform-tests/web-animations/interfaces/Animation/commitStyles.html
r257235
: [95/1000] imported/w3c/web-platform-tests/web-animations/interfaces/Animation/commitStyles.html failed unexpectedly (com.apple.WebKit.WebContent.Development crashed [pid=26743]) [114/1000] imported/w3c/web-platform-tests/web-animations/interfaces/Animation/commitStyles.html failed unexpectedly (com.apple.WebKit.WebContent.Development crashed [pid=26751]) [114/1000] imported/w3c/web-platform-tests/web-animations/interfaces/Animation/commitStyles.html failed unexpectedly (com.apple.WebKit.WebContent.Development crashed [pid=26738]) Exiting early after 3 failures. 110 tests run. 107 tests ran as expected, 3 didn't (890 didn't run):
r257234
: All 1000 tests ran as expected.
Radar WebKit Bug Importer
Comment 4
2020-03-06 11:46:53 PST
<
rdar://problem/60164638
>
Antoine Quint
Comment 5
2020-03-24 09:11:24 PDT
Created
attachment 394369
[details]
Patch
EWS
Comment 6
2020-03-24 09:47:13 PDT
Committed
r258913
: <
https://trac.webkit.org/changeset/258913
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 394369
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug